# CPP3_SmartCalc_v2.0

./: .gitignore  LICENSE
src/: CMakeLists.txt  Makefile  main.cpp
src/controllers/: controller.cpp  controller.h  expression_controller.cpp  expression_controller.h
src/libs/qcustomplot/: qcustomplot.cpp  qcustomplot.h
src/models/: deposit.h  expression.cpp  expression.h  lexeme.cpp  lexeme.h  polish.cpp  polish.h
src/tests/: all.cpp
src/view/: calculator.cpp  calculator.ui  calculator2.cpp  calculator2.h  calculator2.ui
